--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
         <div class="mobile-menu-container">
             <button class="hamburger-btn" id="hamburgerBtn">☰</button>
             <div class="mobile-menu" id="mobileMenu">
+                <a href="culture/inburgering_a1.html" class="mobile-menu-item">🌍 Culture - Inburgering A1</a>
                 <a href="culture/15miljoenmensen.html" class="mobile-menu-item">🌍 Culture - 15 Miljoen Mensen</a>
                 <a href="culture/Nederland_zonder_dijken.html" class="mobile-menu-item">🌍 Culture - Hoe zou Nederland eruit zien zonder dijken?</a>
                 <hr style="border: none; border-top: 1px solid #ddd; margin: 8px 0;">
@@ -557,6 +558,7 @@
             <div class="dropdown">
                 <button class="navbar-link dropdown-toggle">🌍 Culture ▼</button>
                 <div class="dropdown-menu">
+                    <a href="culture/inburgering_a1.html" class="dropdown-item">🎓 Inburgering A1</a>
                     <a href="culture/15miljoenmensen.html" class="dropdown-item">🎬 15 Miljoen Mensen</a>
                     <a href="culture/Nederland_zonder_dijken.html" class="dropdown-item">🎬 Hoe zou Nederland eruit zien zonder dijken?</a>
                 </div>
